# xfyun_services

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: speech_recognition_example.py  speech_synthesis_example.py  translation_example.py
examples/output/: output_1.pcm  output_2.pcm  output_3.pcm
tests/: __init__.py  test_translation.py
xfyun_services/: speech_recognition.py  speech_synthesis.py
